JumpScript/tests/baselines/reference/ambientGetters.errors.txt
tests/cases/compiler/ambientGetters.jump(2,9): error TS1086: An accessor cannot be declared in an ambient context.
tests/cases/compiler/ambientGetters.jump(6,9): error TS1086: An accessor cannot be declared in an ambient context.


==== tests/cases/compiler/ambientGetters.jump (2 errors) ====
    declare class A {
        get length() : number;
            ~~~~~~
!!! error TS1086: An accessor cannot be declared in an ambient context.
    }
    
    declare class B {
        get length() { return 0; }
            ~~~~~~
!!! error TS1086: An accessor cannot be declared in an ambient context.
    }